 - added frontend-side support of quotes and triger expression validation (Eugene)
 - added availability to show negative values in graphs (Artem) 
 - developed database monitoring via ODBC (Eugene)
 - added availability to export/import templates for hosts (Artem)
 - changed how is showed messages (Artem)
 - added login/logout (Artem)

Changes for 1.4.5:
 - [ZBX-253] fixes problem in frontend with long int values (Artem)
 - [ZBX-250] speed improvement for Triggers when use "{ITEM.VALUE}" macro (Sasha)
 - [ZBX-246] fixed header error in Monitoring->slideshows (Artem)
 - [ZBX-243] speed improvement for windows agent for eventlog[] processing (Sasha)
 - [DEV-92] added supprt of multiple windows agents, service description (Sasha)
 - [ZBX-7] added support of system.cpu.util[] for FreeBSD agents, thanks to 'brick' (Sasha)
 - [ZBX-222] fixed problem with slashes (Artem)
 - [ZBX-210] added support of system.cpu.num[] for FreeBSD agents, thanks to 'freak' (Sasha)

Changes for 1.4.4:

 - [ZBX-220] fixed agent crash in case of timeout during first connect (Sasha)
 - [ZBX-219] fixed server crash in processing of discovery (Sasha)

Changes for 1.4.3:

 - [ZBX-218] fixed problem "Unable to add performance counter" on start of win agent(Sasha)
 - [ZBX-192] fixed active checks stops after connection loss (Sasha)
 - [ZBX-152] fixed inefficient check of user permissions (Alexei)
 - [ZBX-189, CVE-2007-6210] fixed super-user permissions of user commands (Alexei)
 - [ZBX-183] fixed compilation problem with undefined res_query() (Alexei)
 - [ZBX-34] fixed transaction related conflict in DBget_maxid (Sasha)
 - [ZBX-181] fixed Activate/Disable items from applications (Artem)
 - [ZBX-176] fixed static compilation of Jabber support (Alexei)
 - [ZBX-100] fixed Oracle compilation errors (Alexei)
 - [ZBX-159] added support of vm.memory.size[available] under Linux (Alexei)
 - [ZBX-172] fixed incorrect SQL caused by character ' in item key (Alexei)