@@ -39,8 +39,10 @@ Changes for 1.5:
  - added login/logout (Artem)
 
 Changes for 1.4.5:
+ - [ZBX-263] fixed problem with saving of lastlogsize for log[] and eventlog[] items when history is set to 0 (Sasha)
  - [ZBX-253] fixes problem in frontend with long int values (Artem)
  - [ZBX-250] speed improvement for Triggers when use "{ITEM.VALUE}" macro (Sasha)
+ - [ZBX-250] 100% CPU on server side after connection loss (Sasha)
  - [ZBX-246] fixed header error in Monitoring->slideshows (Artem)
  - [ZBX-243] speed improvement for windows agent for eventlog[] processing (Sasha)
  - [DEV-92] added supprt of multiple windows agents, service description (Sasha)
